<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:gravity="start"
    android:orientation="vertical"
    tools:context=".MainActivitySecond">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:hint="@string/textH"
        android:inputType="text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nameH"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/phoneH"
        android:inputType="phone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/numberH"
        android:inputType="number" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/passwordH"
        android:inputType="textPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/mailH"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dateH"
        android:inputType="text|date" />

    <CalendarView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#228BC34A"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#7AFF9800" />

</LinearLayout>